--- a/client/src/pages/user/ChatBot.css
+++ b/client/src/pages/user/ChatBot.css
@@ -23,7 +23,7 @@
 .chat-content {
     flex-grow: 1;
     overflow-y: auto;
-    padding: 2rem 1rem 0; /* Add top padding */
+    padding: 2rem 0rem 0; /* Add top padding */
 }
 
 /* === Messages List & Wrapper === */
@@ -52,16 +52,15 @@
     justify-content: center;
     flex-shrink: 0;
     font-size: 1.2rem;
+    background-size: cover;
 }
 
 .bot .avatar {
-    background: linear-gradient(135deg, var(--primary-color), #60a5fa);
-    color: var(--white);
+    background-image: url("https://static.vecteezy.com/system/resources/previews/027/967/934/original/mental-health-logo-illustration-design-vector.jpg")
 }
 
 .user .avatar {
-    background-color: #e5e7eb; /* light gray */
-    color: var(--text-light);
+    background-image: url("https://i.pinimg.com/originals/42/1f/9d/421f9d0c3d545392fe9b939674fa7198.jpg")
 }
 
 /* === Message Text === */
@@ -134,4 +133,10 @@
     .chat-input-form {
         padding: 0.75rem;
     }
+}
+
+.loader{
+    width: 100px;
+    position: relative;
+    left: -25%;
 }
