--- a/client/src/pages/user/appointments.css
+++ b/client/src/pages/user/appointments.css
@@ -15,6 +15,8 @@
 
 .appointments-header {
     display: flex;
+    flex-direction: column;
+    gap: 2rem;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2rem;
